<resources>
    <string name="app_name">Viagens</string>
    <string name="title_activity_lista_pacotes">ListaPacotesActivity</string>
    <string name="especiais">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="cor_de_fundo_roxa">Cor de fundo roxa</string>
    <string name="imagem_da_cidade">Imagem da cidade</string>
    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="imagem_da_cidade_resumo">Imagem da cidade</string>
    <string name="pre_o_final">Preço final:</string>
    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\u0020</string>
    <string name="finalizar_compra">FINALIZAR COMPRA</string>
    <string name="ano_cartao">AA</string>
    <string name="codigo_verificacao_cartao">CVC</string>
    <string name="mes_cartao">MM</string>
    <string name="parab_ns">Parabéns!</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra</string>
    <string name="imagem_da_cidade_fim_compra">Imagem da cidade</string>
</resources>