<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="Digite as informações do cartão de crédito que você deseja usar para o pagamento"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Valor da compra:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$: 421,50"
        android:textSize="24sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_da_compra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_da_compra" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Número do cartão"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/mes_cartao"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/ano_cartao"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@+id/pagamento_mes_cartao"
        android:autofillHints="" />

    <EditText android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/codigo_verificacao_cartao"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_numero_cartao"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pagamento_nome_no_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nome no cartão"
        android:digits="@string/mascara_nome_no_cartao"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao" />

    <Button
        android:id="@+id/pagamento_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/botao_laranja_arredondado"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_no_cartao" />


</androidx.constraintlayout.widget.ConstraintLayout>