<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/fim_da_compra_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fim_da_compra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parab_ns"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/fim_da_compra_banner"
        app:layout_constraintEnd_toEndOf="@+id/fim_da_compra_banner"
        app:layout_constraintStart_toStartOf="@+id/fim_da_compra_banner"
        app:layout_constraintTop_toTopOf="@+id/fim_da_compra_banner"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/fim_da_compra_realizada_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/compra_realizada_com_sucesso"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/fim_da_compra_parabens"
        app:layout_constraintStart_toStartOf="@+id/fim_da_compra_parabens"
        app:layout_constraintTop_toBottomOf="@+id/fim_da_compra_parabens" />

    <TextView
        android:id="@+id/fim_da_compra_confira_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/confira_o_resumo_da_compra"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fim_da_compra_banner" />

    <ImageView
        android:id="@+id/fim_da_compra_imagem_pacote"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fim_da_compra_confira_resumo"
        tools:srcCompat="@drawable/sao_paulo_sp"
        android:contentDescription="@string/imagem_da_cidade_fim_compra" />

    <TextView
        android:id="@+id/fim_da_compra_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="São Paulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fim_da_compra_imagem_pacote" />

    <TextView
        android:id="@+id/fim_da_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="08/04 - 10/04 de 2024"
        app:layout_constraintStart_toStartOf="@+id/fim_da_compra_local"
        app:layout_constraintTop_toBottomOf="@+id/fim_da_compra_local" />

    <TextView
        android:id="@+id/fim_da_compra_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="R$ 243,99"
        app:layout_constraintStart_toStartOf="@+id/fim_da_compra_data"
        app:layout_constraintTop_toBottomOf="@+id/fim_da_compra_data" />

</androidx.constraintlayout.widget.ConstraintLayout>